# redrob-ranker

./: .gitignore  EgniTech.csv  EgniTech.xlsx  README.md  precompute.py  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml
artifacts/: dense_recall_ids.npy  dense_recall_sims.npy
eval/: build_gold_set.py  evaluate.py  gold_set.jsonl  metrics.py
sandbox/: app.py  make_sample.py  rank_demo.py  sample_candidates.jsonl
src/: __init__.py  behavioral.py  bm25_index.py  data.py  embeddings.py  features.py  honeypot.py  jd.py  reasoning.py  scoring.py
tests/: test_data.py  test_honeypot.py  test_jd.py  test_metrics.py  test_reasoning.py  test_recall.py  test_scoring.py
