[project]
name = "redrob-ranker"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.7.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
sandbox = [
    "streamlit>=1.35.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.per-file-ignores]
# metrics.py is copied verbatim from the skill bundle — do not reformat it.
"eval/metrics.py" = ["E501"]
# Gold-set notes are short annotation strings — line-length rule not useful.
"eval/build_gold_set.py" = ["E501"]
# Skill-dict and comment data in test fixtures is wide by nature.
"tests/test_scoring.py" = ["E501"]
"tests/test_honeypot.py" = ["E501"]
"tests/test_reasoning.py" = ["E501"]
"sandbox/*.py" = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
